# sierra-runner

./: Cargo.toml  README.md
corelib/src/: array.cairo  serde.cairo
corelib/src/starknet/: storage_access.cairo
examples/: array.cairo  assertions.cairo  assertions.sierra  branch_align_ex.sierra  branch_align_ex_annotated.sierra  drops.cairo  drops.sierra  fac_2.sierra  factorial.cairo  factorial.sierra  factorial_handritten.sierra  fib_gas.cairo  fib_gas.sierra  fib_no_gas.sierra  gas.cairo  handwritten.sierra  inline.cairo  inline.sierra  mut_var.cairo  mut_var.sierra  panic.cairo  panic.sierra  pass_by_ref.cairo  pass_by_ref.sierra  pass_by_value.cairo  pass_by_value.sierra  program.cairo  program.sierra  snapshot_2.cairo  snapshot_2.sierra  snapshot_modified.sierra  snapshots.cairo  snapshots.sierra  tuples.cairo  tuples.sierra
src/: cli.rs
