[package]
name = "sierra-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
ark-ff = "0.4.0-alpha.7"
ark-std = "0.3.0"
cairo-felt = "0.1.1"
cairo-vm = "0.1.2"
clap = { version = "4.0", features = ["derive"] }
itertools = "0.10.3"
num-bigint = "0.4"
num-traits = "0.2"
salsa = "0.16.1"
thiserror = "1.0.32"
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", version = "1.0.0-alpha.4" }
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", version = "1.0.0-alpha.4" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", version = "1.0.0-alpha.4" }
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo", version = "1.0.0-alpha.4" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", version = "1.0.0-alpha.4" }
cairo-lang-sierra-ap-change = { git = "https://github.com/starkware-libs/cairo", version = "1.0.0-alpha.4" }
cairo-lang-sierra-gas = { git = "https://github.com/starkware-libs/cairo", version = "1.0.0-alpha.4" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo", version = "1.0.0-alpha.4" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo", version = "1.0.0-alpha.4" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", version = "1.0.0-alpha.4" }

[[bin]]
name = "sierra-run"
path = "src/cli.rs"
